<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profileTag"
        android:id="@+id/profileTag"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:id="@+id/editProfile"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sexTag"
        android:id="@+id/sexTag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/editProfile" />

    <RadioGroup
        android:layout_width="227dp"
        android:layout_height="72dp"
        android:layout_alignTop="@+id/sexTag"
        android:id="@+id/radioGroup"
        android:layout_alignLeft="@+id/editProfile"
        android:layout_alignStart="@+id/editProfile">

        <RadioButton android:id="@+id/radioMale"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/radioM" android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioFemale"
            android:text="@string/radioF"
            android:onClick="onRadioButtonClicked"
            android:layout_alignBottom="@+id/radioMale" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSubmit"
        android:id="@+id/profileSubmit"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ageTag"
        android:id="@+id/ageTag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ageSpinner"
        android:prompt="@string/selectAge"
        android:entries="@array/ageGroups"
        android:layout_alignTop="@+id/ageTag"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup" />

</RelativeLayout>
