<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000099"
         />

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MilkAlternatives"
                android:textColor="#191975"
                android:textSize="18dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipeLeft"
                android:textSize="10dp"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="295dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MeatAlternatives"
                android:textColor="#191975"
                android:textSize="18dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipeRight"
                android:textSize="10dp"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="270dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
             >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FruitsAndVeggies"
                android:textColor="#191975"
                android:textSize="18dp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipeLeft"
                android:textSize="10dp"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="145dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GrainProducts"
                android:textColor="#191975"
                android:textSize="18dp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipeLeft"
                android:textSize="10dp"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="250dp" />


        </LinearLayout>

    </ViewFlipper>

</LinearLayout>