<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dwau.mycanadianfoodguide.IntroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/introduction"
        android:id="@+id/introText"
        android:background="@drawable/border"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="5px"/>

    <Space
        android:layout_width="20px"
        android:layout_height="40px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/introText"
        android:id="@+id/space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/applicationUses"
        android:id="@+id/appUses"
        android:background="@drawable/border"
        android:layout_below="@+id/space"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/space"
        android:layout_alignEnd="@+id/space"
        android:padding="5px" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileList"
        android:layout_below="@+id/continueBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/continueBtn"
        android:onClick="toProfile"
        android:text="@string/addProfile"
        android:textSize="10dp"
        android:minHeight="80px"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/appUses"
        android:layout_alignEnd="@+id/appUses" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:id="@+id/profileSelection"
        android:text="@string/selectProfile"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10px"/>

</RelativeLayout>
